<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.xtvt.xtvt.ActivityDashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:animateLayoutChanges="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabExploreActivitis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activities" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabExplorePeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabExploreGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabExplorePosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <include
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_above="@id/bottomNavigation"
        android:layout_below="@+id/appBar"
        layout="@layout/content_dashboard" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_bar_navigation" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="@dimen/fab_margin_top"
        android:layout_marginEnd="@dimen/fab_margin_right"
        android:layout_marginStart="@dimen/fab_margin_left"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        app:srcCompat="@android:drawable/ic_menu_add" />
</android.support.design.widget.CoordinatorLayout>
